# warehouse-fleet-management-system

./: .clang-tidy  .gitignore  README.md
.github/workflows/: ci.yml
docker/: .env.example  docker-compose.yml  fleet-server.Dockerfile  fms-api.Dockerfile
docs/: COMMAND_REFERENCE.md  GLOSSARY.md  LOAD_TESTING.md  PHASE1_DOCUMENTATION.md  PHASE1_TEST_COMMANDS.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE3_PREREQUISITES.md  PHASE4_PLAN.md  PHASE4_PROGRESS.md  PLAN.md  PROJECT_STATUS.md  SYSTEM_ARCHITECTURE.md  VERIFICATION_CHECKLIST.md
src/fms_api/: README.md  generate_grpc.sh  requirements-dev.txt  requirements.txt
src/fms_api/fms_api/: grpc_client.py  main.py  schemas.py
src/fms_api/tests/: test_routes.py
src/fms_fleet_server/: CMakeLists.txt  package.xml
src/fms_fleet_server/config/: fleet_server_params.yaml
src/fms_fleet_server/include/fms_fleet_server/: fleet_grpc_server.hpp  fleet_server_node.hpp  mongo_store.hpp  rabbitmq_client.hpp  robot_status_utils.hpp  task_allocator.hpp  task_utils.hpp
src/fms_fleet_server/launch/: fleet_server.launch.py
src/fms_fleet_server/proto/: fleet.proto
src/fms_fleet_server/scripts/: .gitignore  generate_grpc_stubs.sh  load_test.py
src/fms_fleet_server/src/: fleet_grpc_server.cpp  fleet_server_main.cpp  fleet_server_node.cpp  mongo_store.cpp  rabbitmq_client.cpp  task_allocator.cpp
src/fms_fleet_server/test/: test_task_allocator.cpp
src/fms_fleet_server/test/integration/: mock_robot.py  test_task_lifecycle.py
src/fms_gazebo/: CMakeLists.txt  package.xml
src/fms_gazebo/config/: ros_gz_bridge.yaml
src/fms_gazebo/launch/: sim.launch.py  spawn_robot.launch.py
src/fms_gazebo/scripts/: odom_to_tf.py
src/fms_gazebo/urdf/: fms_robot.urdf.xacro  mobile_base.xacro  mobile_base_gazebo.xacro
src/fms_gazebo/worlds/: warehouse.sdf
src/fms_msgs/: CMakeLists.txt  package.xml
src/fms_msgs/msg/: RobotStatus.msg  TaskAssignment.msg  TaskCompletion.msg
src/fms_navigation/: CMakeLists.txt  package.xml
src/fms_navigation/config/: nav2_params.yaml
src/fms_navigation/launch/: bringup.launch.py  nav2_robot.launch.py
src/fms_navigation/maps/: warehouse.pgm  warehouse.yaml
src/fms_navigation/rviz/: fleet.rviz
src/fms_navigation/scripts/: send_goals.py  warehouse_markers.py
src/fms_robot_agent/: CMakeLists.txt  package.xml
src/fms_robot_agent/bt_xml/: robot_agent.xml
src/fms_robot_agent/config/: robot_agent_params.yaml
src/fms_robot_agent/include/fms_robot_agent/: battery_model.hpp  robot_agent_node.hpp  robot_fsm.hpp
src/fms_robot_agent/include/fms_robot_agent/bt_nodes/: battery_ok.hpp  charge_battery.hpp  execute_pick_drop.hpp  navigate_to_pose_bt.hpp  report_status.hpp  request_recovery.hpp  request_task.hpp
src/fms_robot_agent/launch/: robot_agent.launch.py
src/fms_robot_agent/scripts/: task_injector.py  task_request.py  task_request_amqp.py
src/fms_robot_agent/src/: battery_model.cpp  robot_agent_main.cpp  robot_agent_node.cpp  robot_fsm.cpp
src/fms_robot_agent/src/bt_nodes/: battery_ok.cpp  charge_battery.cpp  execute_pick_drop.cpp  navigate_to_pose_bt.cpp  report_status.cpp  request_recovery.cpp  request_task.cpp
src/fms_robot_agent/test/: test_battery_model.cpp  test_robot_fsm.cpp
