<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fms_fleet_server</name>
  <version>0.1.0</version>
  <description>Central fleet server: aggregates robot status, allocates tasks, and exposes a gRPC API</description>
  <maintainer email="dev@example.com">developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>fms_msgs</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>librabbitmq-dev</depend>
  <depend>libprotobuf-dev</depend>
  <depend>protobuf-compiler</depend>
  <depend>libgrpc++-dev</depend>
  <depend>protobuf-compiler-grpc</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
